--- a/kadry_login.html
+++ b/kadry_login.html
@@ -1,50 +1,43 @@
+<!-- kadry_login.html -->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Logowanie do Panelu Kadrowego</title>
+  <title>Logowanie - Kadry</title>
   <style>
-    body { font-family: Arial; text-align: center; padding: 50px; background: #f2f2f2; }
-    .box { background: white; padding: 30px; max-width: 400px; margin: auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2); }
-    input { padding: 10px; margin: 10px 0; width: 90%; }
-    button { padding: 10px 20px; }
-    .error { color: red; }
+    body { font-family: Arial; background: #eef2f3; display: flex; justify-content: center; align-items: center; height: 100vh; }
+    .login { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 0 8px rgba(0,0,0,0.1); }
+    input { width: 100%; margin: 10px 0; padding: 10px; }
+    button { width: 100%; padding: 10px; }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h2>Logowanie Kadry</h2>
-    <input type="text" id="login" placeholder="Login"><br>
-    <input type="password" id="haslo" placeholder="Hasło"><br>
+  <div class="login">
+    <h2>Logowanie - Panel Kadry</h2>
+    <input type="text" id="login" placeholder="Login">
+    <input type="password" id="haslo" placeholder="Hasło">
     <button onclick="zaloguj()">Zaloguj</button>
-    <p class="error" id="blad"></p>
   </div>
 
   <script>
-    // Inicjalizacja tylko raz (jeśli nie ma jeszcze danych w pamięci przeglądarki)
-    if (!localStorage.getItem("menedzerowie")) {
-      const menedzerowie = [
-        { imie: "Pisarczyk Paweł", login: "pisarczyk.pawel", haslo: "lew4319" },
-        { imie: "Wróblewski Hubert", login: "wroblewski.hubert", haslo: "domek728" },
-        { imie: "Nowikow Dariusz", login: "nowikow.dariusz", haslo: "pociag612" },
-        { imie: "Szmulik Damian", login: "szmulik.damian", haslo: "kosa9214" },
-        { imie: "Nurzyński Paweł", login: "nurzynski.pawel", haslo: "alfa8327" },
-        { imie: "Ewa Dusińska", login: "dusińska.ewa", haslo: "luna3491" }
-      ];
-      localStorage.setItem("menedzerowie", JSON.stringify(menedzerowie));
-    }
+    const menedzerzy = {
+      "Pisarczyk Paweł": "hasloP1",
+      "Wroblewski Hubert": "hasloP2",
+      "Nowikow Dariusz": "hasloP3",
+      "Szmulik Damian": "hasloP4",
+      "Nurzyński Paweł": "hasloP5",
+      "Ewa Dusińska": "hasloP6"
+    };
 
     function zaloguj() {
       const login = document.getElementById("login").value.trim();
       const haslo = document.getElementById("haslo").value.trim();
-      const lista = JSON.parse(localStorage.getItem("menedzerowie")) || [];
 
-      const znaleziony = lista.find(m => m.login === login && m.haslo === haslo);
-      if (znaleziony) {
-        localStorage.setItem("zalogowanyMenedzer", JSON.stringify(znaleziony));
+      if (menedzerzy[login] && menedzerzy[login] === haslo) {
+        localStorage.setItem("menedzerZalogowany", login);
         window.location.href = "kadry.html";
       } else {
-        document.getElementById("blad").innerText = "Błędny login lub hasło.";
+        alert("Błędny login lub hasło");
       }
     }
   </script>
